actualizando el footer

--- a/style/style.css
+++ b/style/style.css
@@ -115,7 +115,7 @@ main{
 
 /* Footer */
 
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; font-family: 'Lexend Deca', sans-serif; }
     .attribution a { color: hsl(228, 45%, 44%); text-decoration: none; }
 
 /* Media query */
